--- a/src/static/themes/default/css/ueditor.css
+++ b/src/static/themes/default/css/ueditor.css
@@ -663,6 +663,10 @@ div.edui-box {
     background-position: -340px 0;
 }
 
+.edui-default  .edui-for-help1 .edui-icon {
+    background-position: -340px 0;
+}
+
 .edui-default  .edui-for-print .edui-icon {
     background-position: -440px -20px;
 }
